Fix location map iframe not showing in Contact tab

--- a/src/style.css
+++ b/src/style.css
@@ -601,16 +601,19 @@ svg.svg-inline--fa {
 }
 
 /* See https://blog.duda.co/responsive-google-maps-for-your-website */
-.location-map {
+#content.tab section .txt-side > .location-map {
   overflow: hidden;
   border-radius: var(--map-radius);
+  display: initial !important;
   padding-bottom: 56.25%;
   position: relative;
   height: 0;
   flex: 1;
+  min-width: 100%;
 }
 
-.location-map iframe {
+#content.tab section .txt-side > .location-map iframe {
+  display: initial !important;
   left: 0;
   top: 0;
   height: 100%;
